@@ -1,3 +1,8 @@
+2008-05-10  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* src/twitux-parser.c (parser_convert_time): Fix time issue
+	w/ "1 hour" & "1 minute".  Patch by Derick Rethans. (#1961570)
+
 2008-04-29  Daniel Morales  <daniminas@gmail.com>
 
 	* Release 0.62.
